* Added the following customtag for items.xml:
	* "noexpansionpack" - Prevents the active item (with 1 or 2 max charges) from being picked by Expansion Pack trinket.
Fixes:
* Fixed an issue with luamod autocomplete not displaying all the available options
/newline/
Modified:
* EntityFamiliar:
	- GetPathFinder -> GetPathfinder
* EntityPlayer:
	- SwapForgottenForm returns boolean, depending if Forgotten/Soul form was switched or not.
* ImGui:
	- Adding an element with the same id as an existing one will now replace the existing element instead of throwing an error.
	- If an error is caused by a callback, imgui will now properly throw an error
Fixes:
* ImGui:
	- Fixed RemoveElement not working on elements created with AddInputColor.
	- Fixed Render callbacks of window elements being executed even if the window is not visible
	- Fixed ImGui closing unexpectedly when pressing enter and the console window is not enabled
	- Fixed ImGui.ImGuiToWorld() and ImGui.WorldToImGui() calls not taking the position arguments as intended
* Pathfinder:
	- Many methods that did not work properly have been fixed
	- Use Entity[Familiar/NPC]:GetPathfinder to access these fixes
	- (EntityNPC.Pathfinder has been left unaffected for existing mod compatibility)
* Misc:
	- Modded characters locked behind achievements no longer appear in the local co-op wheel.
/newline/
/versionseparator/
v1.0.12.b -
Fixes:
* Fix various regressions involving status effects introduced by 1.0.12
/newline/
/versionseparator/
v1.0.12.a -
* The changelogs menu has been revamped. Use the left and right arrow keys to look between versions.
Additions:
* Ambush:
	- [Get/Set]MaxBossChallengeWaves()
	- Allows changing the number of waves in a boss challenge room
Fixes:
* Boss challenge rooms wave count no longer accidentally tied to normal challenge room wave count (ie, now two instead of three)
/newline/
/versionseparator/
v1.0.12 -
Additions: